base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: http
      name: http
    - port: 8920
      targetPort: https
      name: https
    - port: 1900
      targetPort: dlna
      protocol: UDP
      name: dlna
    - port: 7359
      targetPort: discovery
      protocol: UDP
      name: discovery
  selector:
    app: jellyfin
